2000-01-31  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm: Add $KAPVERSION_ global variables

	* Group.pm (subgrp): -w protection in use of name()
	(subgrp): Fix bug in key looping

	* Display/KAPVIEW.pm (sigma): Add support for KAPPA 0.14


2000-01-28  Tim Jenness  <timj@jach.hawaii.edu>

	* Loop.pm (orac_loop_flag): Pod update.

	* Display/GAIA.pm (create_dev): Add newdev method. Pass name into
	create_dev. 

	* Display/P4.pm: Pod updates

2000-01-27  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/Base.pm (dev): Update pod. Check for existence of key
	before returning it.

	* Display/GAIA.pm (create_dev): Use noblock_clone rather than
	clone GAIA method.

	* Display/Base.pm: prettyfy pod. 

2000-01-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/GAIA.pm (create_dev): Add sleep after cloning

	* Display/KAPVIEW.pm (histogram): Fix -w warning with $range

	* Convert.pm (UKIRTio2hds): Fix -w warning with $status
	(hds2ndf_demo): Fix -w warning with $xloc

	* Basic.pm (orac_exit_abnormally): Fix -w warning with $signal

2000-01-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/GAIA.pm: Add status checking after send. Use select
	before socket IO.

	* Display/KAPVIEW.pm: Update pod with return status information. 

1999-10-22  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/SCUBA.pm (gain): Reset FILTER keyword after gain search.

1999-10-13  Tim Jenness  <timj@jach.hawaii.edu>

	* Convert.pm (hds2ndf): Add routine for HDS to NDF conversion.

1999-09-22  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/JCMT.pm (findrecipe): Support phot-pixel jiggle maps

1999-09-20  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/Michelle.pm: Add initialisation of format and rawformat.

	* Frame/UFTI.pm: Add initialisation of format and rawformat.

	* Frame/CGS4.pm: Add file_from_bits and flag_from_bits. Add
	initialisation of format and rawformat.

	* Frame/IRCAM.pm (file_from_bits): Add from base class. Add
	initialisation of format and rawformat.
