@@ -59,8 +59,16 @@ IRCAM uses the ADAM messaging system. (ORAC::Msg::ADAM::Control)
 
 sub start_msg_sys {
 
+
   # Set ADAM environment variables
-  $ENV{'ADAM_USER'} = $ENV{'ORAC_DATA_OUT'}."/adam$$";      # process-specific adam dir
+  # process-specific adam dir
+  # use /tmp/adam$$ unless $ORAC_DATA_OUT is set
+  $ENV{'ADAM_USER'} = "/tmp/adam$$";
+  if (exists $ENV{'ORAC_DATA_OUT'} && defined $ENV{ORAC_DATA_OUT}
+      && -d $ENV{ORAC_DATA_OUT}) {
+    $ENV{'ADAM_USER'} = $ENV{'ORAC_DATA_OUT'}."/adam$$";      
+  }
+
 
   # Set HDS_SCRATCH -- unless it is defined already
   # Want to modify this variable so that we can fix some ndf2fits
