@@ -1,5 +1,9 @@
 2000-01-31  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Inst/CGS4.pm (start_msg_sys): Use ORAC_DATA_OUT for ADAM_USER
+
+	* Inst/SCUBA.pm (start_msg_sys): Use $ORAC_DATA_OUT for $ADAM_USER
+
 	* Basic.pm: Add $KAPVERSION_ global variables
 
 	* Group.pm (subgrp): -w protection in use of name()
